2011-02-16  Matteo Corti  <matteo.corti@id.ethz.ch>

	* README: added hint on adding data sources on RRD files

2011-02-11  Matteo Corti  <matteo.corti@id.ethz.ch>

	* renamed the RPM to nagios-plugins-check-procs-multi

2010-01-25  Matteo Corti  <matteo.corti@id.ethz.ch>

	* COPYING: GPLv3

	* check_procs_multi: fix sanity checks (see #57)

2009-07-07  Matteo Corti  <matteo.corti@id.ethz.ch>

	* check_procs_multi: try to use pgrep when ps -e -o comm fails

2009-06-15  Matteo Corti  <matteo.corti@id.ethz.ch>

	* check_procs_multi: removed dep on Net::DNS

2008-06-09  Matteo Corti  <matteo.corti@id.ethz.ch>

	* check_procs_multi: grepping in perl and keeping ps output

2008-06-06  Matteo Corti  <matteo.corti@id.ethz.ch>

	* check_procs_multi: fixed a bug in the process count (some processes where not correctly
	                     detected

2008-05-26  Matteo Corti  <matteo.corti@id.ethz.ch>

	* check_procs_multi: not using ps -C since it has probles getting perl programs (command
	                     name is different from process name)

2008-03-21  Matteo Corti  <matteo.corti@id.ethz.ch>

	* check_procs_multi: POD in a separate file for ePN compatibility

2008-02-13  Matteo Corti  <matteo.corti@id.ethz.ch>

	* check_procs_multi: the usage text now specifies that more
	  checks can be specified concurrently

2008-02-12  Matteo Corti  <matteo.corti@id.ethz.ch>

	* check_procs_multi: added default values (min 1)
	* check_procs_multi: fixed a bug in the sanity checks

2008-02-11  Matteo Corti  <matteo.corti@id.ethz.ch>

	* check_procs_multi: initial release
