@@ -13,22 +13,24 @@ use inc::Module::Install;
 ##############################################################################
 # Define metadata (we read it from the binary and the POD)
 
-name         'check_procs_multi';
+name              'check_procs_multi';
 
-version_from 'check_procs_multi';
-all_from     'check_procs_multi.pod';
+version_from      'check_procs_multi';
+perl_version_from 'check_procs_multi';
+all_from          'check_procs_multi.pod';
+
 
 ##############################################################################
 # Specific dependencies
 
 include 'version';
 
-requires 'Carp'                      => 0;
-requires 'English'                   => 0;
-requires 'Getopt::Long'              => 0;
-requires 'Nagios::Plugin'            => 0;
-requires 'Nagios::Plugin::Threshold' => 0;
-requires 'version'                   => 0;
+requires 'Carp'                          => 0;
+requires 'English'                       => 0;
+requires 'Getopt::Long'                  => 0;
+requires 'Monitoring::Plugin'            => 0;
+requires 'Monitoring::Plugin::Threshold' => 0;
+requires 'version'                       => 0;
 
 install_script  'check_procs_multi';
 
