@@ -21,6 +21,8 @@
 #   $HeadURL: https://svn.id.ethz.ch/nagios_plugins/check_dir/check_dir $
 #   $Date: 2007-10-31 10:34:21 +0100 (Wed, 31 Oct 2007) $
 
+use 5.00800;
+
 use strict;
 use warnings;
 
@@ -29,8 +31,8 @@ use Carp;
 use English qw(-no_match_vars);
 
 use File::Slurp;
-use Nagios::Plugin;
-use Nagios::Plugin::Threshold;
+use Monitoring::Plugin;
+use Monitoring::Plugin::Threshold;
 use Readonly;
 
 our $VERSION = '1.1.2';
@@ -201,7 +203,7 @@ $help = 0;
 undef $threshold;
 $verbosity = 0;
 @procs     = ();
-$plugin    = Nagios::Plugin->new( shortname => 'CHECK_PROCS_MULTI' );
+$plugin    = Monitoring::Plugin->new( shortname => 'CHECK_PROCS_MULTI' );
 
 Getopt::Long::Configure( 'bundling', 'no_ignore_case' );
 my $result = GetOptions(
@@ -210,7 +212,7 @@ my $result = GetOptions(
     'verbose|v+' => \$verbosity,
     'version|V'  => sub {
         print "check_procs_multi version $VERSION\n";
-        exit $Nagios::Plugin::ERRORS{UNKOWN};
+        exit $Monitoring::Plugin::ERRORS{UNKOWN};
     },
 );
 
@@ -361,7 +363,7 @@ for my $proc (@procs) {
     my $critical_string =
       ( ($cmin) ? "$cmin" : q{} ) . q{:} . ( ($cmax) ? "$cmax" : q{} );
 
-    $threshold = Nagios::Plugin::Threshold->set_thresholds(
+    $threshold = Monitoring::Plugin::Threshold->set_thresholds(
         warning  => $warn_string,
         critical => $critical_string,
     );
