@@ -81,9 +81,9 @@ check_procs_multi depends on
 
 =item * Getopt::Long
 
-=item * Nagios::Plugin
+=item * Monitoring::Plugin
 
-=item * Nagios::Plugin::Threshold
+=item * Monitoring::Plugin::Threshold
 
 =item * version
 
